feat: adding firstName field
