# server-codegen/api/openapi.yaml
@@ -47,6 +47,7 @@ paths:
                   id: "1234"
                   type: food
                   price: 42
+                  name: burger
         required: true
       responses:
         "200":
@@ -61,6 +62,7 @@ paths:
                     id: "1234"
                     type: food
                     price: 42
+                    name: burger
       x-swagger-router-controller: Default
   /product/{id}:
     get:
@@ -110,12 +112,18 @@ components:
           type: string
         type:
           type: string
+        name:
+          type: string
+        firstName:
+          type: string
         version:
           type: string
         price:
           type: number
       example:
+        firstName: firstName
         price: 0.80082819046101150206595775671303272247314453125
+        name: name
         id: id
         type: type
         version: version
