# server-codegen/service/DefaultService.js
@@ -12,7 +12,9 @@ exports.createProduct = function(body) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
+  "firstName" : "firstName",
   "price" : 0.8008281904610115,
+  "name" : "name",
   "id" : "id",
   "type" : "type",
   "version" : "version"
@@ -36,12 +38,16 @@ exports.getAllProducts = function() {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = [ {
+  "firstName" : "firstName",
   "price" : 0.8008281904610115,
+  "name" : "name",
   "id" : "id",
   "type" : "type",
   "version" : "version"
 }, {
+  "firstName" : "firstName",
   "price" : 0.8008281904610115,
+  "name" : "name",
   "id" : "id",
   "type" : "type",
   "version" : "version"
@@ -66,7 +72,9 @@ exports.getProductByID = function(id) {
   return new Promise(function(resolve, reject) {
     var examples = {};
     examples['application/json'] = {
+  "firstName" : "firstName",
   "price" : 0.8008281904610115,
+  "name" : "name",
   "id" : "id",
   "type" : "type",
   "version" : "version"
